--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8",
+		"@types/node": "^24.0.10",
 		"gsap": "^3.13.0",
 		"lenis": "^1.3.4"
 	}
